Fixed layout spacing.

--- a/files/style.css
+++ b/files/style.css
@@ -70,7 +70,6 @@ code {
     }
 
         #content h1 {
-            margin-top: 0;
             color: #4E9A06;
         }
 
